# penumbra

./: .gitignore  Anchor.toml  DEMO_SCRIPT.md  README.md
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/accountant/: page.tsx
app/app/contributor/: page.tsx
app/app/docs/: page.tsx
app/app/employer/: page.tsx
app/app/vest/: page.tsx
app/app/vest/simulator/: page.tsx
app/components/accountant/: dashboard.tsx
app/components/contributor/: dashboard.tsx
app/components/employer/: dashboard.tsx
app/components/layout/: hydrated.tsx  providers.tsx  top-nav.tsx
app/components/ui/: badge.tsx  button-variants.ts  button.tsx  card.tsx  dialog.tsx  input.tsx  on-chain-proof.tsx  primitives.tsx  tabs.tsx  toggle.tsx
app/components/vest/: dashboard.tsx  simulator.tsx
app/lib/: constants.ts  deployment.ts  types.ts  utils.ts
app/lib/store/: app-store.ts
app/lib/umbra/: demo.ts  hook.ts  index.ts  real.ts  seed.ts  service.ts  vest-seed.ts  wallet-bridge.ts
programs/penumbra-scheduler/: Cargo.toml  README.md
programs/penumbra-scheduler/src/: lib.rs
programs/penumbra-scheduler/tests/: penumbra-scheduler.ts
scripts/: README.md  deploy-and-tick.ts  memo-proof.mjs
